MX-398: Implement PALANTIR Java format